allow filtering on direct vs estimated values
